--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bleach==5.0.1
 click==8.1.3
 colorama==0.4.6
 Django==4.1.4
+django-cors-headers==3.13.0
 django-post-office==3.6.3
 djangorestframework==3.14.0
 jsonfield==3.1.0
